--- a/index.couvert.html
+++ b/index.couvert.html
@@ -11,62 +11,65 @@
     --green:#16a34a; --red:#ef4444; --radius:16px; --shadow:0 14px 34px rgba(2,6,23,.08);
     --brand:#0b1220; --blue:#2563eb; --blue-100:#dbeafe;
   }
-  *{box-sizing:border-box; overflow-wrap:anywhere; word-break:break-word}
-  html,body{margin:0;background:var(--bg);font-family:Inter,system-ui,Segoe UI,Arial,sans-serif;color:#0f172a}
 
-  header{background:var(--brand);color:#fff;padding:16px 20px;display:flex;align-items:center}
-  header h1{font-size:18px;margin:0;font-weight:800}
+  /* Tipografia fluida */
+  html{font-size:clamp(14px, 0.9vw + 10px, 16px)}
+  *{box-sizing:border-box; overflow-wrap:anywhere; word-break:break-word; -webkit-tap-highlight-color:transparent}
+  html,body{margin:0;background:var(--bg);font-family:Inter,system-ui,Segoe UI,Arial,sans-serif;color:#0f172a;line-height:1.35}
 
-  .wrap{margin:12px auto;padding:0 16px;width:100%;max-width:100vw}
+  header{background:var(--brand);color:#fff;padding:14px 16px;display:flex;align-items:center}
+  header h1{font-size:clamp(14px,3.5vw,18px);margin:0;font-weight:800}
+
+  .wrap{margin:10px auto;padding:0 12px;width:100%;max-width:100vw}
   .grid{display:grid;gap:12px}
   .grid.cols-3{grid-template-columns:repeat(12,minmax(0,1fr))}
   .kpi-card{grid-column:span 4 / span 4}
 
   .card{background:#fff;border:1px solid var(--line);border-radius:16px;box-shadow:var(--shadow);padding:14px}
   .muted{color:#64748b}
-  .kpi h3{margin:0 0 4px;font-size:14px;color:#64748b}
-  .kpi .val{font-size:24px;font-weight:800}
+  .kpi h3{margin:0 0 4px;font-size:clamp(12px,2.6vw,14px);color:#64748b}
+  .kpi .val{font-size:clamp(20px,5vw,26px);font-weight:800}
 
-  .btn{appearance:none;border:1px solid var(--line);background:#fff;border-radius:12px;padding:10px 12px;font-size:14px;cursor:pointer;font-weight:800}
+  .btn{appearance:none;border:1px solid var(--line);background:#fff;border-radius:12px;padding:8px 10px;font-size:clamp(12px,3vw,14px);cursor:pointer;font-weight:800}
   .btn.dark{background:#111827;color:#fff;border-color:#111827}
 
-  .table{width:100%;border-collapse:collapse;font-size:13px}
-  .table th,.table td{border-bottom:1px solid var(--line);padding:12px 10px;text-align:left}
+  .table{width:100%;border-collapse:collapse;font-size:clamp(12px,2.8vw,13px)}
+  .table th,.table td{border-bottom:1px solid var(--line);padding:10px 8px;text-align:left;vertical-align:middle}
   .table tr.clickable{cursor:pointer}
   .table-wrap{width:100%;overflow:auto}
 
-  .badge{display:inline-block;padding:4px 8px;border-radius:999px;font-size:11px;font-weight:700}
+  .badge{display:inline-block;padding:4px 8px;border-radius:999px;font-size:clamp(10px,2.4vw,11px);font-weight:700}
   .lucr{background:#eafff0;color:#065f46;border:1px solid #bbf7d0}
   .prej{background:#ffecec;color:#7f1d1d;border:1px solid #fecaca}
 
-  .chips{display:flex;gap:10px;flex-wrap:wrap;margin-top:6px}
-  .chip{border:1px solid var(--line);padding:8px 12px;border-radius:999px;background:#fff;cursor:pointer;font-weight:800;display:inline-flex;gap:10px;align-items:center}
+  .chips{display:flex;gap:8px;flex-wrap:wrap;margin-top:8px}
+  .chip{border:1px solid var(--line);padding:6px 10px;border-radius:999px;background:#fff;cursor:pointer;font-weight:800;display:inline-flex;gap:8px;align-items:center}
   .chip .amt{font-weight:800;color:#0b1220;opacity:.95}
   .chip .dash{color:#94a3b8}
   .chip.active{background:#0b1220;color:#fff;border-color:#0b1220}
   .chip.active .amt{color:#fff}
 
-  .pay-break{display:flex;gap:10px;flex-wrap:wrap;margin-top:6px}
+  .pay-break{display:flex;gap:8px;flex-wrap:wrap;margin-top:6px}
   .pill{display:inline-flex;gap:6px;align-items:center;border:1px solid var(--line);border-radius:999px;padding:6px 10px;font-weight:700;background:#fff}
-  .pill .tag{font-size:11px;color:#64748b;font-weight:700;text-transform:uppercase;letter-spacing:.2px}
+  .pill .tag{font-size:clamp(10px,2.6vw,11px);color:#64748b;font-weight:700;text-transform:uppercase;letter-spacing:.2px}
 
   details.paylist{margin-top:10px;border:1px solid var(--line);border-radius:12px;background:#fff}
   details.paylist > summary{list-style:none;padding:10px 12px;cursor:pointer;font-weight:800}
   details.paylist > summary::-webkit-details-marker{display:none}
   .smalltable{width:100%;border-collapse:collapse}
-  .smalltable th,.smalltable td{border-top:1px solid var(--line);padding:10px 8px;font-size:13px;text-align:left}
-  .smallmuted{color:#6b7280;font-size:12px}
+  .smalltable th,.smalltable td{border-top:1px solid var(--line);padding:10px 8px;font-size:clamp(12px,2.8vw,13px);text-align:left}
+  .smallmuted{color:#6b7280;font-size:clamp(11px,2.6vw,12px)}
 
   /* POPOVER + OVERLAY */
   .popover{position:fixed;background:#fff;border:1px solid var(--line);border-radius:14px;box-shadow:var(--shadow);
-           padding:10px;z-index:60;display:none;width:min(94vw,360px);max-height:80vh;overflow:auto}
+           padding:10px;z-index:60;display:none;width:min(94vw,380px);max-height:80vh;overflow:auto}
   .overlay{position:fixed;inset:0;background:transparent;display:none;z-index:55}
 
   /* CALENDÁRIO */
   .cal{width:100%}
   .cal .cal-head{display:flex;align-items:center;justify-content:space-between;padding:6px 8px}
   .cal .cal-grid{display:grid;grid-template-columns:repeat(7,1fr);gap:6px;padding:8px}
-  .cal .dow{font-size:12px;color:#64748b;text-align:center}
+  .cal .dow{font-size:clamp(11px,2.6vw,12px);color:#64748b;text-align:center}
   .cal .day{height:36px;border-radius:10px;display:flex;align-items:center;justify-content:center;cursor:pointer;border:1px solid transparent;font-weight:700}
   .cal .day:hover{background:#f1f5f9}
   .cal .day.out{opacity:.35}
@@ -75,17 +78,28 @@
   .cal .foot{display:flex;justify-content:flex-end;gap:8px;padding:8px}
 
   #loading{position:fixed;inset:0;background:rgba(255,255,255,0.85);display:flex;align-items:center;justify-content:center;
-           font-size:18px;font-weight:800;color:#0b1220;z-index:100}
+           font-size:clamp(16px,4.4vw,18px);font-weight:800;color:#0b1220;z-index:100}
 
+  /* MOBILE */
   @media(max-width:760px){
-    .wrap{padding:0 12px}
+    .wrap{padding:0 10px}
     .grid.cols-3{grid-template-columns:1fr}
     .kpi-card{grid-column:auto}
     .card{padding:12px;border-radius:14px}
-    .kpi .val{font-size:22px}
-    .chips{gap:8px}
-    .chip{padding:8px 10px;font-size:14px}
-    .table th,.table td{padding:10px 8px}
+    .kpi .val{font-size:clamp(20px,6vw,24px)}
+    .chips{gap:6px}
+    .chip{padding:6px 9px;font-size:clamp(12px,3.2vw,14px)}
+    .table th,.table td{padding:8px 6px}
+    .popover{width:96vw;left:2vw !important}
+    .cal .day{height:32px}
+  }
+
+  /* EXTRA PEQUENO */
+  @media(max-width:380px){
+    header{padding:12px}
+    .card{padding:10px}
+    .pill{padding:5px 8px}
+    .chip{padding:5px 8px}
   }
 </style>
 </head>
@@ -112,7 +126,7 @@
       <div>
         <h3>Arrecadação (Couvert)</h3>
         <div class="val" id="kArrecadacao">⏳ carregando…</div>
-        <div id="abcStatus" class="muted" style="font-size:12px"></div>
+        <div id="abcStatus" class="muted" style="font-size:clamp(11px,2.6vw,12px)"></div>
       </div>
     </div>
 
@@ -262,8 +276,6 @@ function fmtRange(a,b){
 }
 
 /*** REGRAS DE INTERVALO EFETIVO (ABC) ***/
-// - 1 dia selecionado: expande para [dia-1, dia+1]
-// - intervalo >= 2 dias: se começa em dia 1, inclui também o último dia do mês anterior
 function getEffectiveABCRange(){
   if(!aIni || !aFim) return {ini:aIni, fim:aFim};
   if (sameYMD(aIni, aFim)) {
@@ -403,21 +415,18 @@ function aplicar(){
   const allSelected = (empresasSelecionadas.size===empresas.length);
   const filtroEmp = (empresa)=> allSelected || empresasSelecionadas.has(empresa);
 
-  // PAGOS
   const pagos = pagamentosAll.filter(p=>{
     const okEmp = filtroEmp(p.empresa);
     const d = p.data_pagamento ? parseISO(p.data_pagamento) : null;
     return okEmp && d && inRange(d,pIni,pFim);
   });
 
-  // ABERTOS
   const abertos = pagamentosAll.filter(p=>{
     const okEmp = filtroEmp(p.empresa);
     const d = !p.data_pagamento && p.vencimento ? parseISO(p.vencimento) : null;
     return okEmp && d && inRange(d,pIni,pFim) && !p.data_pagamento;
   });
 
-  // ABC (com intervalo efetivo)
   const {ini:effIni, fim:effFim} = getEffectiveABCRange();
   const arrsFiltrados = abcAll.filter(x=>{
     const d = parseISO(x.data);
@@ -425,7 +434,6 @@ function aplicar(){
     return okEmp && inRange(d,effIni,effFim);
   });
 
-  // Agrupa por data
   const dias = new Map();
   for(const x of arrsFiltrados){
     const key = String(x.data).slice(0,10);
@@ -433,15 +441,12 @@ function aplicar(){
   }
   const totalArr = Array.from(dias.values()).reduce((s,v)=>s+v,0);
 
-  // Totais de pagamentos
   const somaPago   = pagos.reduce((s,p)=>s+cleanNumber(p.valor),0);
   const somaApagar = abertos.reduce((s,p)=>s+cleanNumber(p.valor),0);
   const somaTotal  = somaPago + somaApagar;
 
-  // Resultado
   const resultado  = totalArr - somaTotal;
 
-  // KPIs
   $("#kArrecadacao").textContent = abcLoaded ? brl(totalArr) : "⏳ carregando…";
   $("#abcStatus").textContent    = abcLoaded ? `(${dias.size} dia(s) no período)` : "Arrecadação sendo carregada em segundo plano";
   $("#kPagamentos").textContent  = brl(somaTotal);
@@ -450,7 +455,6 @@ function aplicar(){
   $("#kTotal").textContent       = brl(somaTotal);
   $("#kResultado").innerHTML     = `${brl(resultado)} <span class="badge ${resultado>=0?"lucr":"prej"}">${resultado>=0?"LUCRO":"PREJUÍZO"}</span>`;
 
-  // A pagar (lista)
   const tbA=$("#tblApagar tbody"); tbA.innerHTML="";
   $("#qtApagar").textContent = abertos.length;
   $("#msgApagar").style.display = abertos.length? "none":"block";
@@ -465,7 +469,6 @@ function aplicar(){
       tbA.appendChild(tr);
     });
 
-  // Detalhes pagos
   const tb=$("#tblPagamentos tbody"); tb.innerHTML="";
   $("#msgEmpty").style.display = pagos.length? "none":"block";
   pagos.forEach(p=>{
@@ -479,7 +482,6 @@ function aplicar(){
     tb.appendChild(tr);
   });
 
-  // Resumo por empresa
   const rb=$("#tblResumoEmp tbody"); rb.innerHTML="";
   empresas.forEach(emp=>{
     const pPago = pagamentosAll.filter(p=>{
@@ -511,7 +513,7 @@ function aplicar(){
 /*** Aplicar filtros ***/
 async function applyFilters(){
   hideAllPopovers();
-  const {ini, fim} = getEffectiveABCRange(); // usa intervalo efetivo para buscar no WebApp
+  const {ini, fim} = getEffectiveABCRange();
   try { await fetchABC(ini, fim); } catch(e){ console.warn(e); }
   coletarEmpresas(); renderChips(); aplicar();
 }
@@ -648,7 +650,6 @@ function hideAllPopovers(){
   $("#btnPR").onclick=openPR;
   $("#btnAR").onclick=openAR;
 
-  // clicar fora (overlay) e ESC
   $("#overlay").onclick = hideAllPopovers;
   document.addEventListener('keydown', e=>{ if(e.key==='Escape') hideAllPopovers(); });
 
